--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.19.0",
+    "@emotion/babel-preset-css-prop": "^11.10.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "next": "12.3.1",
@@ -17,6 +19,8 @@
     "zustand": "^4.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-react": "^7.18.6",
     "@emotion/babel-plugin": "^11.10.2",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1"
